fix: center card fan on mobile by restoring left: 50%

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1144,7 +1144,7 @@
   .app.game-active .main-content {
     position: absolute;
     top: 50%;
-    left: 46%;
+    left: 50%;
     transform: translate(-50%, -50%) scale(0.42);
     transform-origin: center center;
     width: 238vw;
